fix z-indexes

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,5 @@
 .header {
-  z-index: 1;
+  z-index: 10;
   position: relative;
   @media (min-width: 1200px) {
     position: fixed;
@@ -19,7 +19,7 @@
   bottom: 0;
   background-color: rgba(#000, 0.6);
   transition: all .2s ease-in-out;
-  z-index: 1;
+  z-index: 20;
   @media (min-width: 1200px) {
     display: none !important;
   }
@@ -36,7 +36,7 @@
   width: $mobMenu-width;
   height: calc(100% - 60px);
   transform: translateX(-100%);
-  z-index: 10;
+  z-index: 30;
   transition: all .2s ease-in-out;
   &.open {
     transform: translateX(0px);
