--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -44,7 +44,7 @@
   height: calc(100vh - 60px);
   transform: translateX(100%);
   background-color: $body_bg_color;
-  z-index: 10;
+  z-index: 30;
   transition: all .2s ease-in-out;
   &.open-mob {
     transform: translateX(0px);
